# rustcoin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: block.rs  errors.rs  lib.rs  main.rs  transaction.rs  types.rs
src/errors/: errors.rs
